[DEV-27126] Fix spacing between widget elements to be more spacious

--- a/public/stylesheets/betterplace-widget.css
+++ b/public/stylesheets/betterplace-widget.css
@@ -50,7 +50,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0px;
   font-family: Arial, sans-serif;
   color: #3f3f3f;
   -webkit-font-smoothing: antialiased;
@@ -128,7 +128,9 @@ iefallback.legacy-size .logo img {
 }
 
 section {
-  padding: 10px;
+  padding: 15px;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 project,
